<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="accessories">Accessories</string>
    <string name="accessories_title">Accessories for %s (%s)</string>
    <string name="action_do_discount">Discount</string>
    <string name="action_delete_job">Delete Job</string>
    <string name="action_delete_sel">Delete Selections</string>
    <string name="action_email_estimate">EMail estimate</string>
    <string name="action_save">Save</string>
    <string name="action_save_estimate">Save Estimate</string>
    <string name="action_select">Select Products</string>
    <string name="action_view_estimate">View Estimate</string>
    <string name="address_header">Address</string>
    <string name="app_name">Job Estimator</string>
    <string name="basement">Basement</string>
    <string name="bus_phone_header">Bus phone</string>
    <string name="bus_phone_hint">Bus phone</string>
    <string name="button_update_text">Update</string>
    <string name="calgary">Calgary</string>
    <string name="calgary_phone_number">403&#8211;287&#8211;3958</string>
    <string name="calgary_postal">T2H 1K6</string>
    <string name="cancel">Cancel</string>
    <string name="cell_phone_header">Cell</string>
    <string name="cell_phone_hint">Cell phone</string>
    <string name="change">Change</string>
    <string name="change_preferences">Change Preferences</string>
    <string name="city_hint">City</string>
    <string name="company_address">5308 4 St SE</string>
    <string name="company_email">salescal@timberhearth.com</string>
    <string name="company_fax_number">FAX: 403&#8211;243&#8211;9973</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_name">TH Fireplace and Stone</string>
    <string name="company_product_header">Fireplaces / woodstoves</string>
    <string name="company_toll_free">1&#8211;800&#8211;322&#8211;8395</string>
    <string name="company_web_address">Web: www.thfireplaces.ca</string>
    <string name="conflict_floor">Only one of MAIN FLOOR and BASEMENT can be selected</string>
    <string name="conflict_storey">Only one of SINGLE STOREY and TWO STOREY can be selected</string>
    <string name="conflict_through">Only one of THROUGH CONCRETE and THROUGH WOOD can be selected</string>
    <string name="conflict_wall">Only one of INSIDE WALL or OUTSIDE WALL can be selected</string>
    <string name="construction_type">Construction Type</string>
    <string name="cross_corner">Cross Corner</string>
    <string name="customer_add_info_title">Add Customer Information</string>
    <string name="customer_edit_info_title">Edit Customer Information</string>
    <string name="customer_header">Customer</string>
    <string name="customer_name_hint">Customer Name</string>
    <string name="date_header">Date</string>
    <string name="delete">Delete Selections</string>
    <string name="delete_job">Delete current job</string>
    <string name="description_header">Description</string>
    <string name="detail_btu">BTUs:</string>
    <string name="detail_price">Price:</string>
    <string name="detail_supplier">Supplier:</string>
    <string name="detail_volume">Volume:</string>
    <string name="detail_weight">Weight:</string>
    <string name="discount">Discount applied</string>
    <string name="editor_insert_quotes_failed">Product type insert failed</string>
    <string name="email_hint">EMail Address</string>
    <string name="empty_view_subtitle_text">Create a new job</string>
    <string name="empty_view_title_text">No jobs to list</string>
    <string name="estimate_date">Estimate Date:</string>
    <string name="home_phone_hint">Home phone</string>
    <string name="insert_cus_failed">Customer insert has failed</string>
    <string name="insert_cus_successful">Customer saved</string>
    <string name="inside_wall">Inside Wall</string>
    <string name="install_date_header">Installation Date:</string>
    <string name="installation_date_hint">Installation Date</string>
    <string name="item_code_header">Item Code</string>
    <string name="job_insert_failed">Failed to insert new job</string>
    <string name="job_instructions_hint">Job Instructions</string>
    <string name="job_pictures">Job Pictures</string>
    <string name="job_number_header">Job #:</string>
    <string name="job_number_hint">Job #</string>
    <string name="job_quotation">Job Quotation</string>
    <string name="job_site_address_hint">Job site address</string>
    <string name="labour">Labour Costs</string>
    <string name="main_floor">Main Floor</string>
    <string name="no_selection">Nothing selected</string>
    <string name="ok">OK</string>
    <string name="outside_wall">Outside Wall</string>
    <string name="permit">Permits</string>
    <string name="picture_files_id">Shows ID of picture files</string>
    <string name="picture_from_camera_application">Picture from Camera Application</string>
    <string name="postal_code_hint">Postal Code</string>
    <string name="price_header">Price</string>
    <string name="product_description">Product Description</string>
    <string name="product_details">Details</string>
    <string name="product_heading_description">Description</string>
    <string name="product_heading_model">Model</string>
    <string name="product_heading_type">Type</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_header">Product Name</string>
    <string name="product_picture">Product Picture</string>
    <string name="product_selection">Options</string>
    <string name="product_type">Product Type</string>
    <string name="products_selected_hint">Shows Products selected</string>
    <string name="products_selected_header">Products selected Material Codes</string>
    <string name="products_title">Products</string>
    <string name="province_hint">Province</string>
    <string name="quantity_header">Quantity</string>
    <string name="red_deer">Red Deer</string>
    <string name="red_deer_address">#3 – 7819 50th Ave</string>
    <string name="red_deer_phone">403&#8211;287&#8211;3958</string>
    <string name="red_deer_postal">T4P 1M8</string>
    <string name="res_phone_header">Res Phone</string>
    <string name="res_phone_hint">Res Phone</string>
    <string name="save">Save</string>
    <string name="save_data_first">Please save your data first</string>
    <string name="select">Select</string>
    <string name="select_a_model">Select a Model</string>
    <string name="select_a_product">Select a product</string>
    <string name="select_product_category">Select a Category</string>
    <string name="select_products">Select Products</string>
    <string name="selections">Selections</string>
    <string name="settings_central_email_default">Terry.Hagen@timberhearth.com</string>
    <string name="settings_central_email_key">email_central</string>
    <string name="settings_central_email_title">Central Emal Address</string>
    <string name="settings_installation_units_default">4.0</string>
    <string name="settings_installation_units_key">installationunits</string>
    <string name="settings_installation_units_title">Default Number of Installation Units</string>
    <string name="settings_installation_price_default">125.00</string>
    <string name="settings_installation_price_key">installation</string>
    <string name="settings_installation_price_title">Installation Price per Unit of time</string>
    <string name="settings_menu_item">Change </string>
    <string name="settings_permit_default">250.00</string>
    <string name="settings_permit_key">permit</string>
    <string name="settings_permit_title">Permit Price</string>
    <string name="settings_tax_default">0.05</string>
    <string name="settings_tax_key">tax</string>
    <string name="settings_tax_title">Tax Rate</string>
    <string name="settings_title">Job Estimator Settings</string>
    <string name="settings_user_name_default">JobEstimator</string>
    <string name="settings_user_name_key">username</string>
    <string name="settings_user_name_label">Username</string>
    <string name="settings_user_name_title">Username</string>
    <string name="single_storey">Single Storey</string>
    <string name="subtotal">Sub Total</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_selection">Supplier Selection</string>
    <string name="take_picture">Take Picture</string>
    <string name="tax">GST</string>
    <string name="through_wood">Through Wood</string>
    <string name="throughconcrete">Through Concrete</string>
    <string name="title_activity_supplier">Supplier</string>
    <string name="todays_date_hint">Today\'s date</string>
    <string name="total">Total</string>
    <string name="two_storey">2 Storey</string>
    <string name="unit_price_header">Unit Price</string>
    <string name="update_cus_failed">Customer update has failed</string>
    <string name="update_cus_successful">Customer updated</string>
    <string name="update_delete_failed">Delete job failed</string>
    <string name="update_delete_successful">Delete job successful</string>
    <string name="view_estimate_title">View Estimate</string>

</resources>

