<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title" >

    <EditTextPreference
        android:defaultValue="@string/settings_central_email_default"
        android:inputType="textEmailAddress"
        android:key="@string/settings_central_email_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_central_email_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_installation_units_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_installation_units_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_installation_units_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_installation_price_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_installation_price_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_installation_price_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_permit_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_permit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_permit_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_tax_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_tax_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_tax_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_user_name_default"
        android:inputType="textPersonName"
        android:key="@string/settings_user_name_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_user_name_title" />

</PreferenceScreen>
