<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select"
        android:title="@string/action_select"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_job"
        android:title="@string/action_delete_job"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_take_picture"
        android:title="@string/take_picture"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_estimate"
        android:title="@string/action_view_estimate"
        app:showAsAction="never" />

</menu>
