<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/installation_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/installation_date_hint"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/customer_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name_hint"
                    android:inputType="textCapWords|textPersonName" />

                <EditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job_site_address_hint"
                    android:inputType="textCapWords|textPostalAddress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/city_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/city_hint"
                        android:inputType="textCapWords|textPostalAddress" />

                    <EditText
                        android:id="@+id/province_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/province_hint"
                        android:inputType="textCapWords|textPostalAddress" />
                </LinearLayout>

                <EditText
                    android:id="@+id/postal_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code_hint"
                    android:inputType="textCapCharacters" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/job_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/job_number_hint"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/todays_date_hint"

                    android:inputType="date" />

                <EditText
                    android:id="@+id/res_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/home_phone_hint"
                    android:inputType="phone"
                    tools:ignore="NestedWeights" />

                <EditText
                    android:id="@+id/business_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/bus_phone_hint"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/cell_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/cell_phone_hint"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/construction_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/input_layout"
            android:text="@string/construction_type"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/construction_type_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/construction_heading"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/single_storey_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/single_storey" />

                <CheckBox
                    android:id="@+id/main_floor_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_floor" />

                <CheckBox
                    android:id="@+id/inside_wall_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inside_wall" />

                <CheckBox
                    android:id="@+id/through_wood_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/through_wood" />

                <CheckBox
                    android:id="@+id/cross_corner_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cross_corner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/two_storey_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_storey" />

                <CheckBox
                    android:id="@+id/basement_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basement" />

                <CheckBox
                    android:id="@+id/outside_wall_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outside_wall" />

                <CheckBox
                    android:id="@+id/through_concrete_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/throughconcrete" />

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/job_instructions_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/construction_type_check"
            android:hint="@string/job_instructions_hint"
            android:minLines="1"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/job_instructions_edit_text"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/products_selected_header"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/products_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
