<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/job_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/job_site_address_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/install_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/install_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/installation_date_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/job_number"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/job_address"
        app:layout_constraintTop_toTopOf="@id/job_address" />

    <TextView
        android:id="@+id/job_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:hint="@string/job_number_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/install_date"
        app:layout_constraintTop_toTopOf="@id/job_address" />

    <TextView
        android:id="@+id/job_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/customer_name_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/job_location"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_address" />

    <TextView
        android:id="@+id/job_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/city_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/job_postal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/job_name"
        app:layout_constraintStart_toStartOf="@+id/install_date"
        app:layout_constraintTop_toTopOf="@+id/job_name" />

    <TextView
        android:id="@+id/job_postal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/postal_code_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/job_location"
        app:layout_constraintStart_toStartOf="@+id/job_number"
        app:layout_constraintTop_toTopOf="@+id/job_location" />

</android.support.constraint.ConstraintLayout>
