<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selections"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/selections_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/products_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/accessories_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/accessories_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/accessories_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

</LinearLayout>
